feat: 호버 커서 수정

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -25,7 +25,7 @@ a:hover,
 input[type="button"]:hover,
 input[type="submit"]:hover,
 .cursor-pointer:hover {
-    cursor: url("/pointer.png");
+    cursor: url("../components/assets/images/pointer.png"), pointer;
 }
 
 @keyframes shakeClockwise {
